--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "fs-extra": "^6.0.1"
+    "child-process-promise": "^2.2.1",
+    "fs-extra": "^6.0.1",
+    "js-beautify": "^1.7.5",
+    "promisify-node": "^0.5.0"
   }
 }
