--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "bundle": "node ."
+  },
   "dependencies": {
     "child-process-promise": "^2.2.1",
     "fs-extra": "^6.0.1",
