--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "child-process-promise": "^2.2.1",
     "fs-extra": "^6.0.1",
     "js-beautify": "^1.7.5",
-    "promisify-node": "^0.5.0"
+    "promisify-node": "^0.5.0",
+    "webpack": "^4.13.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.5",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.1",
+    "prettier": "^1.13.7"
   }
 }
