--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "versions/webpack4"]
 	path = versions/webpack4
 	url = git@github.com:ff0000-ad-tech/tmpl-standard-base.git
-	branch = develop/webpack4
+	branch = develop/webpack4-no-watch
 [submodule "versions/webpack4-babel7"]
 	path = versions/webpack4-babel7
 	url = git@github.com:ff0000-ad-tech/tmpl-standard-base.git
-	branch = develop/webpack4-babel7
+	branch = develop/webpack4-babel7-no-watch
