--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = versions/webpack4-babel7
 	url = git@github.com:ff0000-ad-tech/tmpl-standard-base.git
 	branch = develop/webpack4-babel7-no-watch
+[submodule "versions/webpack4-babel7-no-rollup"]
+	path = versions/webpack4-babel7-no-rollup
+	url = git@github.com:ff0000-ad-tech/tmpl-standard-base.git
+	branch = develop/webpack4-babel7-no-rollup
